tests/compile-fail/integration__integration__general__xcrement_in_unsupported_spot.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:28:17
   │
28 │         int x = --I0;
   │                 ^^^^ this expression not supported by format


